# training-eval-overlap

./: .gitignore  README.md  RELATORIO_ACADEMICO_COMPLETO.md  RELATORIO_ACADEMICO_SNAPSHOT.md  pyproject.toml
configs/: bge_m3.yaml  default.yaml  multilingual_e5_large_instruct.yaml
notebooks/: training_eval_overlap.ipynb  training_eval_overlap_multilingual_rerun.ipynb
results/runs/bge_m3/tables/: semantic_overlap_by_task.csv  semantic_overlap_run_metadata.json  semantic_overlap_table.tex  top10_suspicious_matches.csv
results/runs/comparison/: model_comparison.md  model_comparison_overall.csv  model_comparison_task_deltas.csv
results/runs/multilingual_e5_large_instruct/tables/: semantic_overlap_by_task.csv  semantic_overlap_run_metadata.json  semantic_overlap_table.tex  top10_suspicious_matches.csv
results/tables/: e5_hub_documents.csv  overlap_summary_snapshot.csv  study_report_metadata.json  study_run_summary.csv  threshold_sensitivity_summary.csv  top20_suspicious_matches_snapshot.csv  top_task_deltas_summary.csv
scripts/: build_study_report_artifacts.py  compare_semantic_runs.py  run_pipeline.py  run_semantic_search.py
src/contamination/: __init__.py  embedding_profiles.py  embeddings.py  extraction.py  indexing.py  matching.py  normalization.py  reporting.py  scoring.py  semantic_comparison.py
tests/: test_embedding_profiles.py  test_indexing.py  test_normalization.py  test_semantic_comparison.py
